--- a/src/app/features/blog/posts/developer/dev-sites/dev-sites.component.html
+++ b/src/app/features/blog/posts/developer/dev-sites/dev-sites.component.html
@@ -1,6 +1,8 @@
 <div #target></div>
 <app-header></app-header>
 <div class="espaciado"></div>
+<app-header-post-supplement [idPublicacion]="idPublicacion"
+    [rutaIconoSugerido]="categoria.rutaIcono"></app-header-post-supplement>
 
 <div class="container">
     <div class="row">
@@ -14,7 +16,7 @@
 
 
 
-<app-footer-home></app-footer-home>
+<app-footer></app-footer>
 <div class="go-up" (click)="scroll(target)">
     <i class="fa fa-chevron-up" aria-hidden="true"></i>
 </div>
