--- a/src/app/shared/components/header-post-supplement/header-post-supplement.component.html
+++ b/src/app/shared/components/header-post-supplement/header-post-supplement.component.html
@@ -4,21 +4,24 @@
         <div class="row">
             <div class="col-md-5 d-flex flex-column">
                 <div>
-                    <img *ngIf="rutaIconoSugerido" src="{{ rutaIconoSugerido }}" alt="" height="50" width="auto" class="drop">
-                    <img *ngIf="!rutaIconoSugerido" src="{{ this.extraerDatoCategoria(publicacion.categoria, 12) }}" alt="" height="50" width="auto" class="drop">
+                    <img *ngIf="rutaIconoSugerido" src="{{ rutaIconoSugerido }}" alt="" height="50" width="auto"
+                        class="drop">
+                    <img *ngIf="!rutaIconoSugerido" src="{{ this.extraerDatoCategoria(publicacion.categoria, 12) }}"
+                        alt="" height="50" width="auto" class="drop">
                 </div>
                 <div class="espacio"></div>
                 <br>
                 <div class="d-flex">
-                    <p class="tc-gray-two f-shadow-into-l fs-17 lh-17 m-0 p-0 texto-lateral m-0">
-                        <small>{{ textoAFecha(publicacion.fechaActualizacion? publicacion.fechaActualizacion : publicacion.fechaCreacion) | date }}</small>
-                    </p>
+                    <time class="tc-gray-two f-shadow-into-l fs-25 lh-25 m-0 p-0 texto-lateral m-0">
+                        {{ textoAFecha(publicacion.fechaActualizacion? publicacion.fechaActualizacion :
+                        publicacion.fechaCreacion) | date }}
+                    </time>
                 </div>
                 <div class="espaciado"></div>
-                    
+
             </div>
             <div class="col-md-7">
-                    <h1 class="tituloPost fuenteOcho pb-2">{{ titulo }}</h1> 
+                <h1 class="tituloPost fuenteOcho pb-2">{{ titulo }}</h1>
 
                 <p *ngFor="let contenido of descripcion" id="description" class="c7 f-open-sans-c fs-20 lh-25">
                     {{ contenido }}
